5512: fix spacing on petitioner information review page;

--- a/web-client/src/styles/custom.scss
+++ b/web-client/src/styles/custom.scss
@@ -2351,3 +2351,11 @@ button.change-scanner-button {
     grid-template-columns: auto;
   }
 }
+
+
+@media only screen and (max-width: $medium-screen) {
+  .petition-review-spacing {
+    margin-top: 1.5rem
+  }
+}
+
